# FragGeneScan.rs

./: .gitignore  Cargo.toml  FragGeneScanRs  LICENSE  README.md  error.txt  fgsrs  project  test.faa  test.faa.txt  test.out
meta/: runFGS  verslag.md
src/: constants.rs  dna_helpers.rs  helpers.rs  main.rs  output.rs  train.rs  viterbi.rs
src/types/: constants.rs  mod.rs  train.rs  viterbi.rs
