[package]
name = "FragGeneScanRs"
version = "0.1.0"
authors = ["Laurens Debackere <laurens.debackere@ugent.be>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bio = "*"
whiteread = "0.5.0"
clap = "2.33.1"
rayon = "1.3.0"